--- a/src/projects.json
+++ b/src/projects.json
@@ -4,7 +4,7 @@
             "name": "Computer Vision PDF Extractor",
             "brief": "Trained a custom Detectron2 Model for Object Detection using PDF documents. Deployed in a React/Django application",
             "symbol": "solution",
-            "link": "/project/0",
+            "link": "#/project/0",
             "carousel" : [
                 {
                     "link": "pdf_detection.png",
@@ -30,7 +30,7 @@
             "name": "Salesforce/JitBit Database Automation",
             "brief": "Built a data pipeline that collected data from regional offices and stored them in HQ Salesforce/JitBit databases",
             "symbol": "solution",
-            "link": "/project/2",
+            "link": "#/project/2",
             "carousel" : [
                 {
                     "link": "staff.png",
@@ -68,7 +68,7 @@
             "name": "Approval Process Power BI Tool",
             "brief": "Designed and deployed an automated approvals process using Power BI, JitBit API, and Python",
             "symbol": "solution",
-            "link": "/project/6",
+            "link": "#/project/6",
             "carousel" : [
                 {
                     "link": "comment_python.png",
@@ -94,7 +94,7 @@
             "name": "US Government Solicitation Analysis",
             "brief": "Pulled, scraped, and analyzed public USG solicitation documents",
             "symbol": "data",
-            "link": "/project/8",
+            "link": "#/project/8",
             "carousel" : [
                 {
                     "link": "nofo_scrape_pdfs.png",
@@ -114,7 +114,7 @@
             "name": "World Bank Sector Analysis",
             "brief": "Used Linear Regression to analyze World Bank funding trends",
             "symbol": "data",
-            "link": "/project/9",
+            "link": "#/project/9",
             "carousel" : [
                 {
                     "link": "world_bank_python.png",
@@ -140,7 +140,7 @@
             "name": "US Government Foreign Assistance Trends Report",
             "brief": "Analyzed the full USG Foreign Assistance dataset for implementing partner, sector, and place of performance trends",
             "symbol": "data",
-            "link": "/project/11",
+            "link": "#/project/11",
             "carousel" : [
                 {
                     "link": "partner_csv.png",
